# rnnoise

./: CMakeLists.txt
src/: CMakeLists.txt  celt_lpc.c  celt_lpc.h  denoise.c  kiss_fft.c  kiss_fft.h  pitch.c  rnn.c  rnn.h
